# tanzolang-core

./: .gitignore  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  ETHICS.md  LICENSE  MANIFEST.in  README.md  TANZOLANG.md  combined_justice_archetype.yaml  framework-checklist.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_template.txt  schema_alignment_review.md  setup.py  tanzo_cli.py
.github/workflows/: ci.yml  manual-install.yml  release.yml
attached_assets/: Hermit_refactored_clean.yaml  Pasted--Alignment-Review-TanzoLang-Core-Architectural-Function-Concern-The-current-repository-i-1745942796967.txt  Pasted--Alignment-Review-TanzoLang-Core-Architectural-Function-Concern-The-current-repository-i-1745943085002.txt  Pasted--Distinguishing-TanzoLang-from-TomoTanzo-Purpose-Clarify-the-conceptual-and-functional-di-1745944057042.txt  Pasted--Improve-Developer-Setup-for-Tomotanzo-Core-Goal-Ensure-smooth-installation-for-developer-1745938775717.txt  Pasted--Project-Goal-Bootstrap-a-public-GitHub-repository-called-tanzo-lang-core-that-houses-the-ope-1745876757204.txt  Pasted--Replit-Agent-Task-Enable-Modular-Typology-Support-in-TanzoLang-Objective-Update-the-Tan-1745946559894.txt  Pasted--Replit-Agent-Task-Evolve-Kai-into-a-Fully-Forged-Tomo-Objective-Transform-the-existing--1745946128677.txt  Pasted--Review-and-Integration-of-Typological-Systems-in-TanzoLang-Objective-Audit-the-status-of-1745944619088.txt  Pasted--TanzoLang-Core-Framework-Buildout-Notes-for-Replit-Agent-Objective-Build-out-the-missi-1745940362065.txt  Pasted--Tomotanzo-Core-Replit-Agent-Patch-Notes-1-Correct-pre-commit-Dependency-In-pyproject--1745903650179.txt
cli/: __init__.py  tanzo-cli.py  tanzo_cli.py
clients/python/: README.md  pyproject.toml
clients/python/tanzo_schema/: __init__.py  export.py  exporter.py  exporters.py  models.py  schema.py  simulation.py  simulator.py  simulators.py  utils.py  validation.py  validator.py  validators.py
clients/python/tanzo_schema/schema/: tanzo-schema.yaml
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: export.ts  exporter.ts  exporters.ts  index.ts  models.ts  schema.ts  schemas.ts  simulation.ts  simulator.ts  simulators.ts  types.ts  utils.ts  validation.ts  validator.ts  validators.ts
docs/: cli.md  clients.md  ethics.md  examples.md  getting-started.md  index.md  mkdocs.yml  philosophy.md  python-client.md  python-sdk.md  python.md  schema.md  typescript-client.md  typescript-sdk.md  typescript.md  typology_legal_considerations.md  usage.md
examples/: Kai_profile.yaml  Kai_profile.yml  digital_archetype_only.yaml
examples/integrations/: langchain_integration.ipynb  tanzo_profile_tool.py  typescript-validator.ts
examples/legacy/: Hermit_profile.yaml  Kai_profile_refactored.yaml
examples/personas/: Kai_forged.yaml  Kai_forged.yml
examples/profiles/: digital_archetype_only.yaml  hermit_with_typologies.yaml
registry/archetypes/: Hermit.yaml  Lover.yaml  Magician.yaml  justice.yaml  justlice.yaml  strength.yaml  test_archetype.yaml  the_chariot.yaml  the_emperor.yaml  the_empress.yaml  the_fool.yaml  the_hermit.yaml  the_hierophant.yaml  the_high_priestess.yaml  the_lovers.yaml  wheel_of_fortune.yaml  zeus.yaml
registry/archetypes_digital/: Echo.yaml
registry/caregivers/: WisdomKeeper.yaml
registry/kabbalah/: Binah.yaml  Tiferet.yaml
registry/purpose_quadrant/: SoulCompass.yaml
registry/realms/: LibraryOfEchoes.yaml  archive_of_the_null_code.yaml  island_of_wyrd.yaml  the_bloom_circuit.yaml
registry/scars/: WithdrawalPattern.yaml
registry/transformations/: HermitToProphet.yaml
registry/trials/: DescentIntoSilence.yaml
registry/zodiac/: Aquarius.yaml  Leo.yaml  Scorpio.yaml  Virgo.yaml
spec/: tanzo-schema.json  tanzo-schema.yaml
static/: site.webmanifest
tests/: conftest.py  test_cli.py  test_cli_exact.py  test_cli_exact_match.py  test_cli_fixed.py  test_cli_format.py  test_cli_help.py  test_export.py  test_exporter.py  test_exporters.py  test_python_client.py  test_schema.py  test_simulation.py  test_simulator.py  test_simulators.py  test_typologies.py  test_utils.py  test_validation.py  test_validator.py
