[tool.poetry]
name = "tanzo-lang-core"
version = "0.1.0"
description = "TanzoLang schema specification and tools for the Tomodaichi Tanzo ecosystem"
authors = ["Onalius Team <team@onalius.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/onalius/tanzo-lang-core"
documentation = "https://onalius.github.io/tanzo-lang-core"
packages = [
    {include = "clients/python/tanzo_schema"},
    {include = "cli"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
jsonschema = "^4.19.0"
pyyaml = "^6.0.0"
click = "^8.1.6"
numpy = "^1.24.0"
mkdocs-material = "^9.2.0"
mkdocs-minify-plugin = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.278"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
tanzo-cli = "cli.tanzo-cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
