[tool.poetry]
name = "tanzo-schema"
version = "0.1.0"
description = "TanzoLang - Schema specification and tools for the Tomodaichi Tanzo ecosystem"
authors = ["Onalius Team <info@onalius.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/onalius/tanzo-lang-core"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "tanzo_schema", from = "clients/python" },
    { include = "cli" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10"
jsonschema = "^4.19.0"
pyyaml = "^6.0.1"
numpy = "^1.25.0"
click = "^8.1.6"
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"
isort = "^5.12.0"
ruff = "^0.0.285"
pre-commit = "^3.4"

[tool.poetry.scripts]
tanzo-cli = "cli.tanzo_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--strict-markers --cov=clients --cov=cli --cov-report=term"
