[tool.poetry]
name = "tanzo-schema"
version = "0.1.0"
description = "Python SDK for TanzoLang schema validation and processing"
authors = ["Onalius Team <team@onalius.com>"]
readme = "README.md"
packages = [{include = "tanzo_schema"}]
license = "Apache-2.0"
repository = "https://github.com/onalius/tanzo-lang-core"
documentation = "https://onalius.github.io/tanzo-lang-core"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
jsonschema = "^4.19.0"
pyyaml = "^6.0.0"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
