[tool.poetry]
name = "tanzo-schema"
version = "0.1.0"
description = "Python SDK for TanzoLang schema"
authors = ["Tomodaichi Tanzo Team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/onalius/tanzo-lang-core"
packages = [{include = "tanzo_schema"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
jsonschema = "^4.17.3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
target-version = "py311"
