[tool.poetry]
name = "tanzo-schema"
version = "0.1.0"
description = "Python SDK for TanzoLang schema validation and manipulation"
authors = ["Onalius Team <info@onalius.com>"]
readme = "README.md"
packages = [{include = "tanzo_schema"}]
repository = "https://github.com/onalius/tanzo-lang-core"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10"
jsonschema = "^4.19.0"
pyyaml = "^6.0.1"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"
isort = "^5.12.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
target-version = "py311"
